--- a/app-application/pom.xml
+++ b/app-application/pom.xml
@@ -79,6 +79,11 @@
         </dependency>
         <dependency>
             <groupId>com.bluecone</groupId>
+            <artifactId>app-wechat</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.bluecone</groupId>
             <artifactId>app-member</artifactId>
             <version>${project.version}</version>
         </dependency>
