微信支付模块

--- a/app-application/pom.xml
+++ b/app-application/pom.xml
@@ -79,11 +79,6 @@
         </dependency>
         <dependency>
             <groupId>com.bluecone</groupId>
-            <artifactId>app-wechat</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.bluecone</groupId>
             <artifactId>app-member</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -124,7 +119,7 @@
         </dependency>
         <dependency>
             <groupId>com.bluecone</groupId>
-            <artifactId>app-wechat</artifactId>
+            <artifactId>app-wechat-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
