--- a/app-wechat/pom.xml
+++ b/app-wechat/pom.xml
@@ -20,6 +20,11 @@
         <!-- 内部依赖 -->
         <dependency>
             <groupId>com.bluecone</groupId>
+            <artifactId>app-wechat-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.bluecone</groupId>
             <artifactId>app-core</artifactId>
             <version>${project.version}</version>
         </dependency>
