--- a/app-application/src/main/resources/application-prod.yml
+++ b/app-application/src/main/resources/application-prod.yml
@@ -170,6 +170,67 @@ bluecone:
       enabled: true
       node-id: 1
 
+# 微信开放平台配置：所有敏感信息通过环境变量注入
+wechat:
+  open-platform:
+    # 是否启用微信开放平台功能（生产环境必须启用）
+    # 生产环境要求：必须配置为 true
+    enabled: ${WECHAT_OPEN_PLATFORM_ENABLED:true}
+    # 第三方平台 appid（从微信开放平台获取）
+    # 生产环境要求：必须配置，否则无法使用开放平台功能
+    component-app-id: ${WECHAT_COMPONENT_APP_ID:}
+    # 第三方平台 appsecret（从微信开放平台获取）
+    # 生产环境要求：必须配置，妥善保管，定期轮换
+    component-app-secret: ${WECHAT_COMPONENT_APP_SECRET:}
+    # 消息校验 Token（在微信开放平台配置，用于验证消息来源）
+    # 生产环境要求：必须配置，与微信开放平台配置保持一致
+    component-token: ${WECHAT_COMPONENT_TOKEN:}
+    # 消息加解密 Key（在微信开放平台配置，43位字符，用于消息加解密）
+    # 生产环境要求：必须配置，与微信开放平台配置保持一致
+    component-aes-key: ${WECHAT_COMPONENT_AES_KEY:}
+  
+  # 微信支付服务商模式配置：所有敏感信息通过环境变量注入
+  pay:
+    partner:
+      # 是否启用微信支付服务商模式（生产环境必须启用）
+      # 生产环境要求：必须配置为 true
+      enabled: ${WECHAT_PAY_PARTNER_ENABLED:true}
+      # 服务商应用 AppID（sp_appid）
+      # 获取方式：登录微信支付商户平台 > 产品中心 > 开发配置 > 服务商 AppID
+      # 生产环境要求：必须配置，与微信支付商户平台配置保持一致
+      sp-app-id: ${WECHAT_PAY_SP_APP_ID:}
+      # 服务商商户号（sp_mchid）
+      # 获取方式：登录微信支付商户平台 > 账户中心 > 商户信息 > 商户号
+      # 生产环境要求：必须配置，与微信支付商户平台配置保持一致
+      sp-mch-id: ${WECHAT_PAY_SP_MCH_ID:}
+      # 微信支付 V3 API 密钥（32位，用于回调解密）
+      # 获取方式：登录微信支付商户平台 > 账户中心 > API安全 > 设置APIv3密钥
+      # 生产环境要求：必须配置，使用32位随机字符串，妥善保管，定期轮换
+      # 风险：密钥泄露将导致支付回调验签失败，必须立即轮换
+      api-v3-key: ${WECHAT_PAY_API_V3_KEY:}
+      # 商户证书序列号
+      # 获取方式：登录微信支付商户平台 > 账户中心 > API安全 > 申请API证书 > 查看证书序列号
+      # 或使用命令：openssl x509 -in apiclient_cert.pem -noout -serial
+      # 生产环境要求：必须配置，与微信支付商户平台配置保持一致
+      cert-serial-no: ${WECHAT_PAY_CERT_SERIAL_NO:}
+      # 商户私钥路径（apiclient_key.pem 文件路径，优先使用）
+      # 获取方式：登录微信支付商户平台 > 账户中心 > API安全 > 申请API证书 > 下载证书
+      # 生产环境要求：privateKeyPath 和 privateKeyString 二选一，优先使用 privateKeyPath
+      # 风险：私钥泄露将导致支付安全问题，必须妥善保管
+      private-key-path: ${WECHAT_PAY_PRIVATE_KEY_PATH:}
+      # 商户私钥字符串（如果不使用文件路径，可直接配置私钥内容）
+      # 注意：privateKeyPath 和 privateKeyString 二选一，优先使用 privateKeyPath
+      private-key-string: ${WECHAT_PAY_PRIVATE_KEY_STRING:}
+      # 默认回调地址（当 PaymentChannelConfig.notifyUrl 为空时使用）
+      # 格式：https://yourdomain.com/api/payment/wechat/callback
+      # 生产环境要求：必须配置，与微信支付商户平台配置保持一致
+      # 注意：回调地址必须是公网可访问的 HTTPS 地址
+      default-notify-url: ${WECHAT_PAY_DEFAULT_NOTIFY_URL:}
+  
+  wxjava:
+    # 是否启用 WxJava SDK（与 open-platform.enabled 保持一致）
+    enabled: ${WECHAT_WXJAVA_ENABLED:true}
+
 # 日志级别配置：生产环境使用 WARN 级别（减少日志量）
 logging:
   level:
